Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • D drm-hwcomposer
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 12
    • Issues 12
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 4
    • Merge requests 4
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar

Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.

  • drm-hwcomposer
  • drm-hwcomposer
  • Issues
  • #30
Closed
Open
Issue created Jan 26, 2020 by maurossi@issor.oruam

Building errors with Android P after commit b3d81781

Here are the building errors:

external/drm_hwcomposer/drmhwctwo.cpp:1318:36: error: no member named 'GetDisplayIdentificationData' in 'HWC2::FunctionDescriptor'
    case HWC2::FunctionDescriptor::GetDisplayIdentificationData:
         ~~~~~~~~~~~~~~~~~~~~~~~~~~^
external/drm_hwcomposer/drmhwctwo.cpp:1319:21: error: use of undeclared identifier 'HWC2_PFN_GET_DISPLAY_IDENTIFICATION_DATA'
      return ToHook<HWC2_PFN_GET_DISPLAY_IDENTIFICATION_DATA>(
                    ^
external/drm_hwcomposer/drmhwctwo.cpp:1323:36: error: no member named 'GetDisplayCapabilities' in 'HWC2::FunctionDescriptor'
    case HWC2::FunctionDescriptor::GetDisplayCapabilities:
         ~~~~~~~~~~~~~~~~~~~~~~~~~~^
external/drm_hwcomposer/drmhwctwo.cpp:1324:21: error: unknown type name 'HWC2_PFN_GET_DISPLAY_CAPABILITIES'; did you mean 'HWC2_PFN_GET_HDR_CAPABILITIES'?
      return ToHook<HWC2_PFN_GET_DISPLAY_CAPABILITIES>(
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                    HWC2_PFN_GET_HDR_CAPABILITIES
hardware/libhardware/include/hardware/hwcomposer2.h:1428:36: note: 'HWC2_PFN_GET_HDR_CAPABILITIES' declared here
typedef int32_t /*hwc2_error_t*/ (*HWC2_PFN_GET_HDR_CAPABILITIES)(
                                   ^
In file included from external/drm_hwcomposer/drmhwctwo.cpp:20:
external/drm_hwcomposer/include/drmhwctwo.h:276:5: error: static_assert failed due to requirement 'std::is_same<int (*)(hwc2_device *, unsigned long, unsigned int *, int *, float *, float *, float *), int (*)(hwc2_device *, unsigned long, unsigned int *, unsigned int *)>::value' "Incompatible fn pointer"
    static_assert(std::is_same<PFN, T>::value, "Incompatible fn pointer");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~
external/drm_hwcomposer/drmhwctwo.cpp:1324:14: note: in instantiation of function template specialization 'android::DrmHwcTwo::ToHook<int (*)(hwc2_device *, unsigned long, unsigned int *, int *, float *, float *, float *), int (*)(hwc2_device *, unsigned long, unsigned int *, unsigned int *)>' requested here
      return ToHook<HWC2_PFN_GET_DISPLAY_CAPABILITIES>(
             ^
5 errors generated.
Assignee
Assign to
Time tracking