drm_hwcomposer: Try to fix build with older Android Pie releases

Try to fix build regressions for P that were introduced with
commit b3d81781 ("drm_hwcomposer: Add GetDisplayCapabilities and
getDisplayIdentificationData") as noted in issue #30
  https://gitlab.freedesktop.org/drm-hwcomposer/drm-hwcomposer/issues/30

Change-Id: I4bfeb952cff19d4c3511ead69df1186d3a04cc87
Signed-off-by: John Stultz <john.stultz@linaro.org>